2025-03-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.7
        * configure.ac: Idem
        * configure: Idem

	* src/parsecl.c: Ignore optind

2025-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Correct one possible bashism
	* configure: Regenerated

2024-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2024-01-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.6
        * configure.ac: Idem
        * configure: Idem

2024-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/libdieharder/bits.c: Adjust format for r-devel on	Windows
        * src/libdieharder/countx.c: Idem
        * src/libdieharder/rng_file_input.c: Idem
        * src/libdieharder/rngav.c: Idem
        * src/libdieharder/sts_monobit.c: Idem

2023-01-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.5
        * configure.ac: Idem
        * configure: Idem

	* configure.ac: Remove 'AC_PROG_CC' to appease a CRAN email
        * configure: Idem

2022-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/libdieharder/dieharder/libdieharder.h: Include <stdint.h>
	as carried over from pull request #4 in dieharder repo

2022-10-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.4
        * configure.ac: Idem
        * configure: Idem

        * src/*: Numerous changes to accomodate clang-15 -Wstrict-prototypes

2021-12-23  Dirk Eddelbuettel  <edd@debian.org>

        * README.md: Remove unused continuous integration artifact and badge

2021-12-14  Dirk Eddelbuettel  <edd@debian.org>
