@@ -24,11 +24,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup
-        uses: eddelbuettel/github-actions/r-ci-setup@master
+        uses: eddelbuettel/github-actions/r-ci@master
 
-      - name: Bootstrap
-        run: ./run.sh bootstrap
-        
       - name: Dependencies
         run: |
           ./run.sh install_deps
